:memo: Update labels in Mod Support Request issue template

--- a/.github/ISSUE_TEMPLATE/mod-support-request.yml
+++ b/.github/ISSUE_TEMPLATE/mod-support-request.yml
@@ -1,7 +1,7 @@
 name: Mod Support Request
 description: Request support for a specific mod
 title: "[Mod Support Request] EXAMPLE MOD"
-labels: ["mod-support"]
+labels: ["🧩 mod-support"]
 body:
   - type: markdown
     attributes:
