--- a/.github/workflows/optimize.yml
+++ b/.github/workflows/optimize.yml
@@ -17,34 +17,37 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      
+
       - name: 📦 Install oxipng
-        uses: baptiste0928/cargo-install@v1
+        uses: baptiste0928/cargo-install@v2
         with:
           crate: oxipng
           version: latest
 
       - name: 🧾 Get changed PNG files
         id: changed-files
-        uses: tj-actions/changed-files@v23.2
+        uses: tj-actions/changed-files@v35
         with:
           since_last_remote_commit: "true"
-          files: '**/*.png'
+          files: "**/*.png"
 
       - name: ⚡ Optimize PNG files
         run: oxipng -sZ -o 3 -i 0 --ng ${{ steps.changed-files.outputs.all_changed_files }}
-      
+
       - name : 🧾 Get optimized PNG files
         id: optimized-files
-        run: echo "::set-output name=all_optimized_files::$(git status --porcelain | sed s/^...// | sed -z 's/\n/%0A/g;s/%0A$/\n/')"
-      
+        run: |
+          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          echo "all_optimized_files<<$EOF" >> $GITHUB_OUTPUT
+          echo "$(git status --porcelain | sed s/^...//)" >> $GITHUB_OUTPUT
+          echo "$EOF" >> $GITHUB_OUTPUT
+
       - name: ⬆️ Commit and push changes
         if: ${{ steps.optimized-files.outputs.all_optimized_files }}
         uses: swinton/commit@v2.x
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: |
-            ${{ steps.optimized-files.outputs.all_optimized_files }}
+          files: ${{ steps.optimized-files.outputs.all_optimized_files }}
           commit-message: ':zap: Optimize PNG files'
           ref: ${{ github.ref }}
