:memo: Add Data Pack to modloaders in Mod Support Request issue template

--- a/.github/ISSUE_TEMPLATE/mod-support-request.yml
+++ b/.github/ISSUE_TEMPLATE/mod-support-request.yml
@@ -53,6 +53,7 @@ body:
         - Fabric
         - Forge
         - Quilt
+        - Data Pack
         - Other
     validations:
       required: true
